# project_example

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindEigen.cmake  mpAddEigen.cmake  mpIncludeEigen.cmake
cmake/ExternalProjects/: Eigen.cmake
src/: CMakeLists.txt  matrix.cpp  matrix.hpp
tests/: CMakeLists.txt  catch.hpp  test_matrix.cc
